vpc-with-efs/VPC-With-EFS-CF-Template.yml
AWSTemplateFormatVersion: 2010-09-09
Metadata:
  'AWS::CloudFormation::Interface':
    ParameterGroups:
      - Label:
          default: Network Configuration
        Parameters:
          - KeyPairName
          - TomcatAMI
    ParameterLabels:
      KeyPairName:
        default: Key Pair Name
      TomcatAMI:
        default: Tomcat AMI ID
Parameters:
  KeyPairName:
    Description: >-
      The key pair to establish a SSH connection to the servers. This should
      be already created.
    Type: 'AWS::EC2::KeyPair::KeyName'
  TomcatAMI:
    Type: String
    Default: ami-2a22014f
Resources:
  # Create VPC and subnets
  XEnvVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.0.0.0/16
      InstanceTenancy: default
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
        - Key: Name
          Value: XEnvVPC
  XEnvPrivateSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select 
        - '0'
        - !GetAZs ''
      VpcId: !Ref XEnvVPC
      Tags:
        - Key: Name
          Value: XEnvPrivateSubnet1
  XEnvPrivateSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select 
        - '1'
        - !GetAZs ''
      VpcId: !Ref XEnvVPC
      Tags:
        - Key: Name
          Value: XEnvPrivateSubnet2
  XEnvPublicSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: 10.0.254.0/24
      AvailabilityZone: !Select 
        - '0'
        - !GetAZs ''
      VpcId: !Ref XEnvVPC
      Tags:
        - Key: Name
          Value: XEnvPublicSubnet1
  XEnvPublicSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: 10.0.252.0/24
      AvailabilityZone: !Select 
        - '1'
        - !GetAZs ''
      VpcId: !Ref XEnvVPC
      Tags:
        - Key: Name
          Value: XEnvPublicSubnet2
  # Attach an internet gateway to the VPC for allowing traffic to the public 
  # subnets from the internet
  XEnvInternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: XEnvInternetGateway
  XEnvVPCInternetGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref XEnvVPC
      InternetGatewayId: !Ref XEnvInternetGateway
  # Define public route table for connecting the internet gateway 
  # and public subnets
  XEnvPublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref XEnvVPC
      Tags:
        - Key: Name
          Value: XEnvPublicRouteTable
  XEnvPublicSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref XEnvPublicRouteTable
      SubnetId: !Ref XEnvPublicSubnet2
  XEnvPublicSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref XEnvPublicRouteTable
      SubnetId: !Ref XEnvPublicSubnet1
  XEnvInternetGatewayPublicRouteTableRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref XEnvPublicRouteTable
      GatewayId: !Ref XEnvInternetGateway
    DependsOn: XEnvInternetGateway
  # Definte private route table for configuring routing for private subnets
  XEnvPrivateRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref XEnvVPC
      Tags:
        - Key: Name
          Value: XEnvPrivateRouteTable
  XEnvPrivateSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref XEnvPrivateRouteTable
      SubnetId: !Ref XEnvPrivateSubnet2
  XEnvPrivateSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref XEnvPrivateRouteTable
      SubnetId: !Ref XEnvPrivateSubnet1
  # Create elastic file system
  XEnvFileSystem:
    Type: AWS::EFS::FileSystem
    Properties:
      PerformanceMode: generalPurpose
      FileSystemTags:
      - Key: Name
        Value: XEnvFileSystem
  XEnvPublicSubnet1MountTarget:
    Type: AWS::EFS::MountTarget
    Properties:
      FileSystemId:
        Ref: XEnvFileSystem
      SubnetId:
        Ref: XEnvPublicSubnet1
      SecurityGroups:
      - Ref: XEnvMountTargetSecurityGroup
  XEnvPublicSubnet2MountTarget:
    Type: AWS::EFS::MountTarget
    Properties:
      FileSystemId:
        Ref: XEnvFileSystem
      SubnetId:
        Ref: XEnvPublicSubnet2
      SecurityGroups:
      - Ref: XEnvMountTargetSecurityGroup
  XEnvMountTargetSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Ref: XEnvVPC
      GroupDescription: Security group for mount target
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '2049'
        ToPort: '2049'
        CidrIp: 0.0.0.0/0
  # Create EC2 instances via autoscaling groups for providing auto-healing
  # Public instance 1
  XEnvPublicInstance1LaunchConfiguration:
    Type: 'AWS::AutoScaling::LaunchConfiguration'
    Properties:
      ImageId: !Ref TomcatAMI
      InstanceType: t2.micro
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: '20'
            VolumeType: gp2
            DeleteOnTermination: 'true'
      KeyName: !Ref KeyPairName
      SecurityGroups:
        - !Ref XEnvPublicEC2InstanceSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/usr/bin/env bash
          echo "---> Starting Tomcat..."
          sudo systemctl start tomcat
          echo "---> Installing nfs-common..."
          sudo apt-get install -y nfs-common
          echo "---> Mounting EFS volume..."
          mkdir /mnt/efs
          sudo mount -t nfs4 -o nfsvers=4.1 ${XEnvFileSystem}.efs.${AWS::Region}.amazonaws.com:/ /mnt/efs
          echo "---> Initialization completed"          
  XEnvPublicInstance1AutoScalingGroup:
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    Properties:
      LaunchConfigurationName: !Ref XEnvPublicInstance1LaunchConfiguration
      DesiredCapacity: 1
      MinSize: 1
      MaxSize: 1
      HealthCheckType: ELB
      HealthCheckGracePeriod: 10
      TargetGroupARNs:
        - !Ref XEnvAppLoadBalancerTargetGroup
      VPCZoneIdentifier:
        - !Ref XEnvPublicSubnet1
      Tags:
        - Key: Name
          Value: XEnvPublicEC2Instance1
          PropagateAtLaunch: 'true'
  # Public instance 2
  XEnvPublicInstance2LaunchConfiguration:
    Type: 'AWS::AutoScaling::LaunchConfiguration'
    Properties:
      ImageId: !Ref TomcatAMI
      InstanceType: t2.micro
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: '20'
            VolumeType: gp2
            DeleteOnTermination: 'true'
      KeyName: !Ref KeyPairName
      SecurityGroups:
        - !Ref XEnvPublicEC2InstanceSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/usr/bin/env bash
          echo "---> Starting Tomcat..."
          sudo systemctl start tomcat
          echo "---> Installing nfs-common..."
          sudo apt-get install -y nfs-common
          echo "---> Mounting EFS volume..."
          mkdir /mnt/efs
          sudo mount -t nfs4 -o nfsvers=4.1 ${XEnvFileSystem}.efs.${AWS::Region}.amazonaws.com:/ /mnt/efs
          echo "---> Initialization completed"
  XEnvPublicInstance2AutoScalingGroup:
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    Properties:
      LaunchConfigurationName: !Ref XEnvPublicInstance2LaunchConfiguration
      DesiredCapacity: 1
      MinSize: 1
      MaxSize: 1
      HealthCheckType: ELB
      HealthCheckGracePeriod: 10
      TargetGroupARNs:
        - !Ref XEnvAppLoadBalancerTargetGroup
      VPCZoneIdentifier:
        - !Ref XEnvPublicSubnet2
      Tags:
        - Key: Name
          Value: XEnvPublicEC2Instance2
          PropagateAtLaunch: 'true'
  # Private instance 1
  XEnvPrivateInstance1LaunchConfiguration:
    Type: 'AWS::AutoScaling::LaunchConfiguration'
    Properties:
      ImageId: !Ref TomcatAMI
      InstanceType: t2.micro
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: '20'
            VolumeType: gp2
            DeleteOnTermination: 'true'
      KeyName: !Ref KeyPairName
      SecurityGroups:
        - !Ref XEnvPrivateEC2InstanceSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/usr/bin/env bash
          sudo systemctl start tomcat
  XEnvPrivateInstance1AutoScalingGroup:
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    Properties:
      LaunchConfigurationName: !Ref XEnvPrivateInstance1LaunchConfiguration
      DesiredCapacity: 1
      MinSize: 1
      MaxSize: 1
      HealthCheckType: ELB
      HealthCheckGracePeriod: 10
      TargetGroupARNs:
        - !Ref XEnvAppLoadBalancerTargetGroup
      VPCZoneIdentifier:
        - !Ref XEnvPrivateSubnet1
      Tags:
        - Key: Name
          Value: XEnvPrivateEC2Instance1
          PropagateAtLaunch: 'true'
  # Private instance 2
  XEnvPrivateInstance2LaunchConfiguration:
    Type: 'AWS::AutoScaling::LaunchConfiguration'
    Properties:
      ImageId: !Ref TomcatAMI
      InstanceType: t2.micro
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: '20'
            VolumeType: gp2
            DeleteOnTermination: 'true'
      KeyName: !Ref KeyPairName
      SecurityGroups:
        - !Ref XEnvPrivateEC2InstanceSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/usr/bin/env bash
          sudo systemctl start tomcat
  XEnvPrivateInstance2AutoScalingGroup:
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    Properties:
      LaunchConfigurationName: !Ref XEnvPrivateInstance2LaunchConfiguration
      DesiredCapacity: 1
      MinSize: 1
      MaxSize: 1
      HealthCheckType: ELB
      HealthCheckGracePeriod: 10
      TargetGroupARNs:
        - !Ref XEnvAppLoadBalancerTargetGroup
      VPCZoneIdentifier:
        - !Ref XEnvPrivateSubnet2
      Tags:
        - Key: Name
          Value: XEnvPrivateEC2Instance2
          PropagateAtLaunch: 'true'
  # Define EC2 instance security groups
  XEnvPublicEC2InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref XEnvVPC
      GroupDescription: Public EC2 instance security group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '8080'
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp
          FromPort: '-1'
          ToPort: '-1'
          CidrIp: 0.0.0.0/0
  XEnvPrivateEC2InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref XEnvVPC
      GroupDescription: Private EC2 instance security group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '8080'
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp
          FromPort: '-1'
          ToPort: '-1'
          CidrIp: 0.0.0.0/0
  # Add application load balancer
  XEnvAppLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internet-facing
      Subnets:
        - Ref: XEnvPublicSubnet1
        - Ref: XEnvPublicSubnet2
      SecurityGroups:
        - Ref: XEnvAppLoadBalancerSecurityGroup
  XEnvAppLoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn:
            Ref: XEnvAppLoadBalancerTargetGroup
      LoadBalancerArn:
        Ref: XEnvAppLoadBalancer
      Port: 80
      Protocol: HTTP
  XEnvAppLoadBalancerTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 15
      HealthCheckProtocol: HTTP
      HealthCheckPath: /
      HealthCheckTimeoutSeconds: 10
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 5
      Matcher:
        HttpCode: '200'
      Name: XEnvAppLoadBalancerTargetGroup
      Port: 8080
      Protocol: HTTP
      TargetGroupAttributes:
      - Key: deregistration_delay.timeout_seconds
        Value: '20'
      VpcId:
        Ref: XEnvVPC
  XEnvAppLoadBalancerSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref XEnvVPC
      GroupDescription: Load Balancer Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '8080'
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '8080'
          CidrIp: 0.0.0.0/0
Outputs:
  LoadBalancerURL:
    Value: !Join 
      - ''
      - - 'http://'
        - !GetAtt 
          - XEnvAppLoadBalancer
          - DNSName
    Description: Load Balancer URL
